RESOLVED FIXED32256
Google reader gets stuck in the "Loading..." state and does not complete
https://bugs.webkit.org/show_bug.cgi?id=32256
Summary Google reader gets stuck in the "Loading..." state and does not complete
sjlee0
Reported 2009-12-07 16:40:04 PST
Starting build 51788, the Google Reader page gets stuck while rendering the main list area. A screenshot is attached. Clearing cache doesn't help.
Attachments
screenshot (91.82 KB, image/png)
2009-12-07 16:40 PST, sjlee0
no flags
Patch (4.81 KB, patch)
2009-12-09 23:29 PST, Maciej Stachowiak
oliver: review+
sjlee0
Comment 1 2009-12-07 16:40:57 PST
Created attachment 44447 [details] screenshot
mlaster
Comment 2 2009-12-08 08:22:50 PST
I'm seeing this behavior too in r51825.
Bill Rodriguez
Comment 3 2009-12-08 08:58:16 PST
I am experiencing this.. I have removed all plugins and reset everything and it still isn't working..
Marcus Cavanaugh
Comment 4 2009-12-08 11:34:39 PST
Same problem here. Web Inspecter reveals the following: File/Line: /reader/ui/1352531699-en-scroll.js?hl=en:81 NOT_FOUND_ERR: DOM Exception 8: An attempt was made to reference a Node in a context where it does not exist.
Adam Turetzky
Comment 5 2009-12-08 19:36:56 PST
I'm experiencing this too with build 51881 and it started a few builds ago in the last 24 hours. The same thing is happening when trying to access the Google Voice as well. It won't load the main table area but instead gets stuck with only part of the header and sidebar loaded.
Mihai Parparita
Comment 6 2009-12-08 19:42:16 PST
(I'm a Google Reader engineer) I can reproduce this with r51881 on Snow Leopard (10.6.2). I was not able to reproduce with Leopard (10.5.8) on a the same WebKit release. The error described by Marcus appears to occur within the Closure library, so it's possible to see the unobfuscated code: http://code.google.com/p/closure-library/source/browse/trunk/closure/goog/dom/dom.js#657 child in this case is an empty NodeList, which I can see how it would throw an exception if you tried to append it to an element. At that same code path, Safari 4.0.4 doesn't seem to end up with a NodeList, but with an (empty) string. Let me know if you need more details to track this down.
sjlee0
Comment 7 2009-12-08 21:32:07 PST
I also noticed Gmail's "Move to" and the "Labels" buttons are not working (the menu doesn't drop down on click). I suspect this might be a related issue. The error console says "NOT_FOUND_ERR: DOM Exception 8: An attempt was made to reference a Node in a context where it does not exist."
Bill Rodriguez
Comment 8 2009-12-09 06:43:52 PST
Just to add to the gMail comment you also can't use the Image Upload feature..
nate.barham
Comment 9 2009-12-09 07:55:15 PST
This problem persists in r51881 under Snow Leopard.
sjlee0
Comment 10 2009-12-09 11:08:24 PST
Shawn Wilton
Comment 11 2009-12-09 12:03:00 PST
I'm having the same issue. Stuck at loading. This is also happening on google calendar when you try to add a new event.
Maciej Stachowiak
Comment 12 2009-12-09 22:57:41 PST
Maciej Stachowiak
Comment 13 2009-12-09 22:58:14 PST
*** Bug 32329 has been marked as a duplicate of this bug. ***
Maciej Stachowiak
Comment 14 2009-12-09 23:01:07 PST
*** Bug 32342 has been marked as a duplicate of this bug. ***
Maciej Stachowiak
Comment 15 2009-12-09 23:29:57 PST
Maciej Stachowiak
Comment 16 2009-12-09 23:48:06 PST
Note You need to log in before you can comment on or make changes to this bug.