2009-12-09  Maciej Stachowiak  <mjs@apple.com>

Reviewed by Oliver Hunt.

        Google reader gets stuck in the "Loading..." state and does not complete
        https://bugs.webkit.org/show_bug.cgi?id=32256
        <rdar://problem/7456388>

        * jit/JITArithmetic.cpp:
        (JSC::JIT::emitSlow_op_jless): Fix some backward branches.
2009-12-09  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver Hunt.

        Test for: Google reader gets stuck in the "Loading..." state and does not complete
        https://bugs.webkit.org/show_bug.cgi?id=32256

        * fast/js/codegen-jless-expected.txt: Added.
        * fast/js/codegen-jless.html: Added.
        * fast/js/script-tests/codegen-jless.js: Added.


Canonical link: https://commits.webkit.org/43364@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51939 268f45cc-cd09-0410-ab3c-d52691b4dbfc