LayoutTests/fast/js/script-tests/codegen-jless.js
@@ -1,0 +1,7 @@
+description(
+"Tests particular unusual cases of jump-if-less codegen."
+);
+
+shouldBe("!(true && undefined > 0) ? 'true' : 'false'", "'true'");
+
+var successfullyParsed = true;
